# GeoClaw-OpenAI

./: .gitignore  CHANGELOG.md  GeoClaw-OpenAI_v1.0_工程说明书.docx  GeoClaw-OpenAI_工程说明书.docx  README.md  pyproject.toml  soul.md  user.md
configs/: skills_registry.json  thematic_maps.yaml
docs/: analysis-skills-quickstart.md  beginner-quickstart.md  cli-onboard.md  development-guide.md  framework-design.md  geoclaw-full-retrospective-v2.1.0.md  geoclaw-full-retrospective-v2.3.0.md  geoclaw-full-retrospective-v2.3.3.md  geoclaw-full-retrospective-v2.3.4.md  geoclaw-full-retrospective-v2.4.0.md  geoclaw-full-retrospective-v3.0.0.md  local-env-notes.md  native-cases-and-skills.md  release-notes.md  scientist-learning-guide.md  skill-authoring-spec.md  skill-case-mall-site-selection.md  skill-security-guard.md  soul-user-profile.md  sre-3.0-implementation-plan.md  team-install-onepager.md  technical-reference-geoclaw-openai.md  wuhan-osm-workflow.md
pipelines/: wuhan_geoclaw.yaml
scripts/: build_wuhan_project.py  check_local_env.sh  check_pyqgis.py  day_run.sh  download_osm_wuhan.py  e2e_complex_nl_suite.sh  export_thematic_maps.py  export_wuhan_map.sh  generate_engineering_manual.py  generate_v1_docx.py  geoclaw_case_runner.py  geoclaw_operator_runner.py  geoclaw_skill_runner.py  install_geoclaw.sh  install_geoclaw_openai.sh  reinstall_geoclaw_openai.sh  run_beginner_demos.sh  run_dialogue_10_rounds.sh  run_dialogue_15_rounds.sh  run_dialogue_20_rounds.sh  run_dialogue_30_chitchat.sh  run_location_analysis_case.sh  run_native_cases.sh  run_qgis_pipeline.py  (+5 more)
(+115 files in other folders)
