[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoclaw-openai"
version = "2.3.3"
description = "GeoClaw-style geospatial workflows on top of QGIS processing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "UrbanComp Lab @ China University of Geosciences (Wuhan)"}]
dependencies = [
  "pyyaml>=6.0"
]

[project.optional-dependencies]
network = [
  "trackintel>=1.4.2",
  "pandas>=2.0",
  "networkx>=3.0"
]

[project.scripts]
geoclaw-openai = "geoclaw_qgis.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
